<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Health Care</string>
    <string name="senior_care_alert">Senior Care Alert</string>
    <string name="explore">Explore</string>
    <string name="medicine">Medicine</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_explore_fragment">\nHello Explore Fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="hello_medicine_fragment">Hello Medicine Fragment</string>
    <string name="hello_notification_fragment">Hello Notification Fragment</string>
    <string name="hello_setting_fragment">Hello Setting Fragment</string>
    <string name="verify_account">Verify Account</string>
    <string name="didn_t_receive_code_resend_code_00_59">Didn\'t receive code? Resend Code 00:59</string>
    <string name="_4_digit_code">4 Digit Code</string>
    <string name="code_has_been_send_to">Code has been sent to </string>
    <string name="code_has_been_send_to_johndoe_gmail_com_nenter_the_code_to_verify_your_account">Code has been sent to johndoe@gmail.com.\nEnter the code to verify your account.</string>
    <string name="logout">Logout</string>
    <string name="code_has_been_send_to_default">Code has been send to default</string>
    <string name="by_continuing_you_agree_to_terms_of_service_and_privacy_policy">By continuing, you agree to Terms of Service and Privacy Policy.</string>
    <string name="create_account">Create Account</string>
    <string name="must_contain_8_char">must contain 8 char.</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or_login_with">Or login with</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_worries_enter_your_email_address_below_and_we_will_send_you_a_code_to_reset_password">No worries! Enter your email address below and we will send you a code to reset password.</string>
    <string name="send_reset_instruction">Send Reset Instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_and_confirm_your_new_password_nyou_will_need_to_login_after_you_reset">Please enter and confirm your new password.\nYou will need to login after you reset.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="no_notifications">No Notifications</string>
    <string name="we_ll_let_you_know_when_there_will_be_something_to_update_you">We\'ll let you know when there will be something to update you.</string>
    <string name="heart_rate_is_too_high_need_to_emergency">Heart rate is too high. Need to Emergency!</string>
    <string name="didnt_receive_code_resend_with_timer">Didn\'t receive code? Resend in %s</string>
    <string name="_10_24pm">10:24pm</string>
    <string name="heart_rate_alert">HEART RATE ALERT</string>
    <string name="google_logo">Google logo</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="good_morning">Good Morning</string>
    <string name="heart_rate">HEART RATE</string>
    <string name="oxygen_level">OXYGEN</string>
    <string name="ecg">ECG</string>
    <string name="weight">WEIGHT</string>
    <string name="check_heart_rate">Check Heart Rate</string>
    <string name="check_oxygen_level">Check Oxygen Level</string>
    <string name="check_ecg">Check ECG</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="heart_rate_icon">Heart Rate Icon</string>
    <string name="oxygen_level_icon">Oxygen Level Icon</string>
    <string name="ecg_icon">ECG Icon</string>
    <string name="weight_icon">Weight Icon</string>
    <string name="default_heart_rate">84bpm</string>
    <string name="default_oxygen_level">99</string>
    <string name="default_ecg">GOOD</string>
    <string name="default_weight">65kg</string>
    <string name="default_heart_rate_current">Current 84bpm</string>
    <string name="default_oxygen_level_current">Current 99</string>
    <string name="default_ecg_current">Current GOOD</string>
    <string name="default_weight_current">Current 65 kg</string>
    <string name="hello_weight_fragment">HELLO WEIGHT FRAGMENT\n</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="back">BACK</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="_29_march">29 March</string>
    <string name="_84">84</string>
    <string name="bpm">BPM</string>
    <string name="_42">42</string>
    <string name="_131">131</string>
    <string name="average_69_bpm">Average 69 BPM</string>
    <string name="minute">MINUTE</string>
    <string name="hour">HOUR</string>
    <string name="_99">99</string>
    <string name="min_spo2">Min Sp02\n</string>
    <string name="_92">92</string>
    <string name="spo2_icon">SPO2 ICON\n</string>
    <string name="percent">Percent</string>
    <string name="_98">98</string>
    <string name="spo2">SpO2\n</string>
    <string name="average_97_percent">Average 97 Percent</string>
    <string name="max_spo2">max spo2\n</string>
    <string name="Drug">Drug\n</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="bs_tuana_satoth">BS. Tuana Satoth</string>
    <string name="bv_VietNamUniversityHospital">VietNamUniversity</string>
    <string name="_10_04_2025_08_00">10/04/2025 - 08:00</string>
    <string name="start_date_26_05_2025">Start Date: 26/05/2025</string>
    <string name="time_of_day_breakfast_dinner">Time of Day: Breakfast, Dinner</string>
    <string name="frequency_2_day">Frequency: 2/day</string>
    <string name="dosage_1_pill">Dosage: 1 pill</string>
    <string name="paracetamol_500mg">Paracetamol 500mg</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="history">HISTORY</string>
    <string name="add_information">Add Information</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="enter_email_to_reset_password">Enter Email to reset</string>
    <string name="update_information_title">Update Information</string>
    <string name="name_hint">Name</string>
    <string name="address_label">Address:</string>
    <string name="address_hint">Address</string>
    <string name="dob_label">Date of Birth:</string>
    <string name="dob_hint">Date of Birth (dd/mm/yyyy)</string>
    <string name="gender_label">Gender:</string>
    <string name="blood_type_label">Blood Type:</string>
    <string name="phone_label">Phone:</string>
    <string name="phone_hint">Phone</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="no_medications">NO MEDICATION</string>
    <string name="none">None</string>
    <string name="medical_visit_details">Medical Visit Details</string>
    <string name="information">Information</string>
    <string name="doctor_remarks">Doctor Remarks</string>
    <string name="medications">Medications</string>
    <string name="condition">CONDITION:</string>
    <string name="doctor">DOCTOR:</string>
    <string name="facility">FACILITY:</string>
    <string name="date">DATE:</string>
    <string name="time">TIME:</string>
    <string name="location">LOCATION:</string>
    <string name="diagnosis">DIAGNOSIS:</string>
    <string name="back_button">Back button</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="clinic">CLINIC:</string>
    <string name="treatment">TREATMENT:</string>
    <string name="enter_diagnosis">Enter diagnosis</string>
    <string name="enter_doctor_name">Enter doctor\'s name</string>
    <string name="enter_clinic_name">Enter clinic name</string>
    <string name="enter_treatment">Enter treatment</string>
    <string name="enter_date">Enter date (dd/MM/yyyy)</string>
    <string name="enter_time">Enter time (HH:mm)</string>
    <string name="google_login_title">Google Login\n</string>
    <string name="error_no_id_token">No ID token received from Google Sign-In</string>
    <string name="error_sign_in_cancelled">Sign-in cancelled by user</string>
    <string name="error_developer_config">Developer configuration error. Please contact support.</string>
    <string name="error_sign_in_failed">Sign-in failed: %1$s</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="error_unexpected">An unexpected error occurred. Please try again.</string>
    <string name="error_saving_state">Error saving login state</string>
    <string name="emergency_contacts">Emergency Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_emergency_contacts">No Emergency Contact</string>
    <string name="edit_contact_description">Edit emergency contact</string>
    <string name="delete_contact_description">Delete emergency contact</string>
    <string name="relationship">Relationship</string>
    <string name="priority">Priority</string>
    <string name="enter_contact_name">Enter contact name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="select_relationship">Select relationship</string>
    <string name="select_priority">Select priority</string>
    <string name="alarms">Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="current">Current</string>
    <string name="check_email_for_link">Check your email for the verification link: </string>
    <string name="check_email_for_link_default">Check your email for the verification link.</string>
    <string name="arrow_icon">Arrow Right Icon\n</string>
    <string name="loading_medications">Loading medications</string>
    <string name="clear_search">Clear search</string>
    <string name="search_medications">Search medications…</string>
    <string name="medication_management">Medication</string>
    <string name="medication_filter_tabs">Medication filter tabs</string>
    <string name="add_medication">MEDICATION</string>
    <string name="dosage">Dosage:</string>
    <string name="frequency">Frequency:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="time_of_day">Time of Day:</string>
    <string name="meal_relation">Meal Relation</string>
    <string name="notes">Notes:</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="delete_medication">Delete Medication</string>
    <string name="search_icon">Search Icon</string>
    <string name="add_medication_title">MEDICATION</string>
    <string name="medication_name_hint">Medication</string>
    <string name="dosage_amount_hint">Amount (e.g., 1)</string>
    <string name="dosage_unit_label">Unit</string>
    <string name="frequency_hint">Frequency (e.g., 1)</string>
    <string name="time_of_day_hint">Time (e.g., 07:00, 19:00)</string>
    <string name="meal_relation_label">Meal Relation</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="min">Min\n</string>
    <string name="max">Max\n</string>
</resources>