<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/explore"
            android:title="@string/explore"
            android:icon="@drawable/ic_explore"/>
        <item
            android:id="@+id/medicine"
            android:title="@string/medicine"
            android:icon="@drawable/ic_medicine"/>
        <item
            android:id="@+id/home_page"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/ic_notification"/>
        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_setting"/>


</menu>