<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background">

    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/ic_back_spo2_to_home"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title: SpO2 -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/oxygen_level"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ic_back_spo2_to_home"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Date -->
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_29_march"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <!-- SpO2 Value -->
    <TextView
        android:id="@+id/tv_spo2_value"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/_98"
        android:textColor="@color/primary_text_color"
        android:textSize="110sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <!-- Percent Label -->
    <TextView
        android:id="@+id/tv_percent_label"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/percent"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_spo2_value" />

    <!-- SpO2 Icon -->
    <ImageView
        android:id="@+id/iv_spo2_icon"
        android:layout_width="138dp"
        android:layout_height="140dp"
        android:layout_marginEnd="35dp"
        android:contentDescription="@string/spo2_icon"
        android:src="@drawable/ic_oxygen"
        app:layout_constraintBottom_toBottomOf="@id/tv_spo2_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_spo2_value"
        app:layout_constraintTop_toTopOf="@id/tv_spo2_value"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/heart_icon_color" />

    <!-- Min and Max Values -->
    <ImageView
        android:id="@+id/ic_min_spo2_value"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/min_spo2"
        android:src="@drawable/ic_min_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent_label" />

    <TextView
        android:id="@+id/tv_min_value"
        android:layout_width="31dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/_92"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ic_min_spo2_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent_label" />

    <ImageView
        android:id="@+id/ic_max_spo2_value"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/max_spo2"
        android:src="@drawable/ic_max_value"
        app:layout_constraintStart_toEndOf="@+id/tv_min_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent_label" />

    <TextView
        android:id="@+id/tv_max_value"
        android:layout_width="36dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/_99"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ic_max_spo2_value"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent_label" />

    <!-- Average Value -->
    <TextView
        android:id="@+id/tv_average_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab_medium"
        android:text="@string/average_97_percent"
        android:textColor="@color/primary_text_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_max_spo2_value" />

    <!-- Tabs: Minute, Hour, Day, Week -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@color/tab_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_average_label"
        app:tabIndicatorColor="@color/tab_text_selected"
        app:tabSelectedTextColor="@color/tab_text_selected"
        app:tabTextColor="@color/tab_text_unselected">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/minute" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/hour" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/day" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/week" />

    </com.google.android.material.tabs.TabLayout>

    <!-- Chart -->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart_spo2"
        android:layout_width="363dp"
        android:layout_height="423dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>